Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p><img src="https://lh5.googleusercontent.com/kpG-mPaQdXLcl10N3tsGdO8uOEWqcmDqrK9_jaWAk1s=w766-h899-no" alt="BLDC mounted"></p>
+        <p><img src="https://raw.githubusercontent.com/volatile666/RobotArm/master/bldc_mounted.jpg" alt="bldc mounted"></p>
       </section>
     </div>
 
